# asr_test

./: CMakeLists.txt  README.md  dsp_filter.h  record_pcm.cpp  record_pcm.h  test.cpp
baidu_asr/inc/: asr_process.h  common.h  token.h
baidu_asr/src/: asr_process.cpp  common.cpp  token.cpp
include/: Makefile  config.h
include/sound/: Makefile
include/sound/uapi/: Makefile
